examples/test/testpolicy16170.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16170
  namespace: namespace78
spec:
  podSelector:
    matchLabels:
      key15: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value36
          key46: value8
      podSelector:
        matchLabels:
          key43: value42
          key5: value35
          key18: value0
